finally fixed SIZE error in makefile

--- a/HaViMo2_CM530_examples/HaViMo2/Makefile
+++ b/HaViMo2_CM530_examples/HaViMo2/Makefile
@@ -44,6 +44,7 @@ OBJCPFLAGS_BIN = -O binary
 OBJDUMP = $(TCHAIN_PREFIX)objdump
 OBJDUMPFLAGS = -h -S -C -D
 
+SIZE = $(TCHAIN_PREFIX)size
 
 AR = $(TCHAIN_PREFIX)ar
 ARFLAGS = cr
