Deleted the "misc.c" and "misc.h" files from the stm32 library since they were never compiled in any working projects and cause errors when compilation is attempted.  Also added '-pedantic' to the makefile, just to check for more stuff I might have missed (mostly warnings about C++ comments not permitted in ISO C90).

--- a/HaViMo2_CM530_examples/HaViMo2/Makefile
+++ b/HaViMo2_CM530_examples/HaViMo2/Makefile
@@ -20,7 +20,7 @@ LIBRARY_DIRS = -Lstm32f10x_lib
 
 
 #~~~~~~~~~~~~~~~~~~~~ Compiler Options ~~~~~~~~~~~~~~~~~~~~
-COMPILE_OPTS = -mcpu=cortex-m3 -mthumb -Wall -g -Os -fno-common 
+COMPILE_OPTS = -mcpu=cortex-m3 -mthumb -Wall -pedantic -g -Os -fno-common 
 
 #~~~~~~~~~~~~~~~~~~~~ Toolchain Prefix ~~~~~~~~~~~~~~~~~~~~
 TCHAIN_PREFIX=arm-none-eabi-
@@ -104,7 +104,6 @@ LIBSTM32_OBJS = \
  stm32f10x_lib/src/stm32f10x_spi.o \
  stm32f10x_lib/src/stm32f10x_wwdg.o \
  stm32f10x_lib/src/stm32f10x_vector.o
-   
  
 $(LIBSTM32_OUT): $(LIBSTM32_OBJS)
 	$(AR) $(ARFLAGS) $@ $(LIBSTM32_OBJS)
